shade fix remaing contrast issues. #3442

--- a/openscholar/themes/hwpi_vibrant/flavors/shade/shade.css
+++ b/openscholar/themes/hwpi_vibrant/flavors/shade/shade.css
@@ -129,7 +129,7 @@ body.front #columns{
 }
 #layout_16_9_below .slide-copy,
 #layout_16_9_below .rslides_tabs{
-	background-color:#8A97A1;
+	background-color:#687781;
 }
 .front article{
 	padding-bottom:25px;
@@ -276,7 +276,7 @@ ul.links li.link-count-node-readmore {
 }
 
 .sidebar .block-title {
-    background-color: #8A97A1;
+    background-color: #687781;
     border-bottom: medium none;
     color: #FFFFFF;
     font-weight: normal;
